2010-05-24  Tony Chang  <tony@chromium.org>

Reviewed by David Levin.

        [chromium] Fix zoom tests after r60104
        https://bugs.webkit.org/show_bug.cgi?id=39645

        m_zoomFactor moved from Frame to FrameView.  FrameView has separate
        notions of page zoom and text zoom.  In my hurried compile fix, I
        assumed that m_zoomFactor was for page zoom, but it's not always.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::setZoomLevel):

Canonical link: https://commits.webkit.org/51205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60131 268f45cc-cd09-0410-ab3c-d52691b4dbfc